--- a/index.html
+++ b/index.html
@@ -8,5 +8,11 @@
 <body>
   <h1>First Page</h1>  
   <p>This is a paragraph</p>
+  <ul>
+    <li>one</li>
+    <li>two</li>
+    <li>three</li>
+
+  </ul>
 </body>
 </html>
